@@ -68,9 +68,13 @@ kfreebsd_entry ()
 {
   os="$1"
   version="$2"
-  recovery="$3"	# not used yet
-  args="$4"	# not used yet
-  title="$(gettext_quoted "%s, with kFreeBSD %s")"
+  recovery="$3"
+  args="$4"
+  if ${recovery} ; then
+    title="$(gettext_quoted "%s, with kFreeBSD %s (recovery mode)")"
+  else
+    title="$(gettext_quoted "%s, with kFreeBSD %s")"
+  fi
   printf "menuentry '${title}' ${CLASS} {\n" "${os}" "${version}"
   save_default_entry | sed -e "s/^/\t/"
   if [ -z "${prepare_boot_cache}" ]; then
@@ -80,7 +84,7 @@ kfreebsd_entry ()
   printf '%s\n' "${prepare_boot_cache}"
   cat << EOF
 	echo			'$(printf "$(gettext_quoted "Loading kernel of FreeBSD %s ...")" ${version})'
-	kfreebsd		${rel_dirname}/${basename}
+	kfreebsd		${rel_dirname}/${basename} ${args}
 EOF
 
   if test -n "${devices}" ; then
@@ -172,7 +176,10 @@ while [ "x$list" != "x" ] ; do
     module_dir_rel=$(make_system_path_relative_to_its_root $module_dir)
   fi
 
-  kfreebsd_entry "${OS}" "${version}"
+  kfreebsd_entry "${OS}" "${version}" false
+  if [ "x${GRUB_DISABLE_RECOVERY}" != "xtrue" ]; then
+    kfreebsd_entry "${OS}" "${version}" true "-s"
+  fi
 
   list=`echo $list | tr ' ' '\n' | grep -vx $kfreebsd | tr '\n' ' '`
 done
